; ModuleID = '/home/carl/AnghaBench/esp-idf/components/esp_netif/extr_esp_netif_objects.c_esp_netif_list_lock.c'
source_filename = "/home/carl/AnghaBench/esp-idf/components/esp_netif/extr_esp_netif_objects.c_esp_netif_list_lock.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@s_list_lock = common dso_local global i32* null, align 8
@ESP_ERR_NO_MEM = common dso_local global i32 0, align 4
@portMAX_DELAY = common dso_local global i32 0, align 4
@ESP_OK = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @esp_netif_list_lock() #0 {
  %1 = alloca i32, align 4
  %2 = load i32*, i32** @s_list_lock, align 8
  %3 = icmp eq i32* %2, null
  br i1 %3, label %4, label %11

4:                                                ; preds = %0
  %5 = call i32* (...) @xSemaphoreCreateMutex()
  store i32* %5, i32** @s_list_lock, align 8
  %6 = load i32*, i32** @s_list_lock, align 8
  %7 = icmp eq i32* %6, null
  br i1 %7, label %8, label %10

8:                                                ; preds = %4
  %9 = load i32, i32* @ESP_ERR_NO_MEM, align 4
  store i32 %9, i32* %1, align 4
  br label %16

10:                                               ; preds = %4
  br label %11

11:                                               ; preds = %10, %0
  %12 = load i32*, i32** @s_list_lock, align 8
  %13 = load i32, i32* @portMAX_DELAY, align 4
  %14 = call i32 @xSemaphoreTake(i32* %12, i32 %13)
  %15 = load i32, i32* @ESP_OK, align 4
  store i32 %15, i32* %1, align 4
  br label %16

16:                                               ; preds = %11, %8
  %17 = load i32, i32* %1, align 4
  ret i32 %17
}

declare dso_local i32* @xSemaphoreCreateMutex(...) #1

declare dso_local i32 @xSemaphoreTake(i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
